feat(infra): integrate fintech service into nginx reverse proxy
- Configured Nginx to proxy `/api/fintech/` requests to the `service-fintech` container.
- Updated README documentation with the new gateway-based access URL for Fintech API docs.
- Removed the 503 "Service Fintech not ready" placeholder.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,8 +14,10 @@ server {
 
     # --- API: FINTECH ---
     location /api/fintech/ {
-        # proxy_pass http://service-fintech:8000/;
-        return 503 "Service Fintech not ready"; 
+        # Przekierowujemy /api/fintech/accounts -> /api/accounts
+        proxy_pass http://service-fintech:8002/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
     # --- API: B2B DATA ---
