feat(monitor): add Price Monitor service with Celery and Redis
- Initialize `service-price-monitor` as a background worker using Celery.
- Implement `fetch_crypto_prices` task to query CoinGecko API every 60s.
- Update `docker-compose.yml` to register `service-monitor` linked to Redis.
- Integrate Celery client in `service-fintech` with a test endpoint for task dispatching.
- Add necessary dependencies (`celery`, `redis`, `requests`) to project configurations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,19 @@ services:
     networks:
       - portfolio_network
 
+  service-monitor:
+    build: ./service-price-monitor
+    container_name: monitor_service
+    volumes:
+      - ./service-price-monitor:/app
+    command: celery -A main worker --loglevel=info -B
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+    depends_on:
+      - redis
+    networks:
+      - portfolio_network
+
   # --- FRONTEND (React + Vite) ---
   frontend:
     build: ./frontend-landing
