--- a/service-fintech/pyproject.toml
+++ b/service-fintech/pyproject.toml
@@ -11,6 +11,8 @@ django-ninja = "^1.1"
 psycopg = {extras = ["binary"], version = "^3.1.18"} # Nowoczesny sterownik Postgres z binarkami
 uvicorn = "^0.27.0"
 pydantic = "^2.6.0"
+celery = "^5.3.6"
+redis = "^5.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
