feat(dashboard): integrate price monitor and implement modular service views
- Refactor `DashboardPage` to use a tabbed navigation system for Overview, Fintech, B2B, and Monitor modules.
- Update `service-price-monitor` to persist fetched crypto prices (BTC/ETH) into Redis.
- Add a new `/api/v1/crypto` endpoint to `service-b2b-data` to expose Redis-cached prices to the frontend.
- Implement `CryptoTicker` component using React Query for real-time market data updates.
- Refactor Nginx configuration to use a unified `/api/b2b/` prefix for B2B and Monitor requests.
- Redesign the `Projects` section on the landing page to serve as a launchpad for specific dashboard views.
- Update documentation and API clients to reflect the new routing and service integration.
```

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,9 +21,10 @@ server {
     }
 
     # --- API: B2B DATA ---
-    location /api/company/ {
-        # Przekierowujemy request z /api/company/123 na /api/v1/companies/123 w kontenerze
-        proxy_pass http://service-b2b:8001/api/v1/companies/;
+    location /api/b2b/ {
+        # Przekierowujemy /api/b2b/companies -> /api/v1/companies
+        # Przekierowujemy /api/b2b/crypto -> /api/v1/crypto
+        proxy_pass http://service-b2b:8001/api/v1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
