feat: implement transaction PDF generation and add AI mentoring section
- Add PDF confirmation generation to `service-fintech` using `reportlab`
- Implement backend endpoints for transaction PDF downloads and demo account initialization
- Enhance transaction history UI with PDF download functionality and loading states
- Add `AiMentoring` component and navigation to showcase AI-assisted development workflow
- Update `service-fintech` dependencies with `reportlab`
```

--- a/service-fintech/pyproject.toml
+++ b/service-fintech/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.27.0"
 pydantic = "^2.6.0"
 celery = "^5.3.6"
 redis = "^5.0.1"
+reportlab = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
