feat(project): integrate real MF API, add dashboard overview and contact form
- **B2B Service**: Implement real-time company verification using Ministry of Finance API (`wl-api.mf.gov.pl`) with fallback to internal mock.
- **B2B Service**: Add `/contact` endpoint with background task handling and `/system-status` for aggregating system metrics.
- **Frontend**: Introduce `Overview` dashboard widget displaying live stats (verified companies, crypto prices, service health).
- **Frontend**: Refactor `DashboardPage` with tabbed navigation and connect `Contact` component to backend API.
- **Infrastructure**: Update Nginx proxy rules and dependencies (`httpx`, `pydantic-settings`).

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ __pycache__/
 .pytest_cache/
 .mypy_cache/
 .ruff_cache/
+celerybeat-schedule
+celerybeat-schedule.bak
+celerybeat-schedule.dat
+celerybeat-schedule.dir
 
 # Node / Frontend
 node_modules/
