--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,8 @@ server {
     location /api/b2b/ {
         # Przekierowujemy /api/b2b/companies -> /api/v1/companies
         # Przekierowujemy /api/b2b/crypto -> /api/v1/crypto
+        # Przekierowujemy /api/b2b/contact -> /api/v1/contact
+        # Przekierowujemy /api/b2b/system-status -> /api/v1/system-status
         proxy_pass http://service-b2b:8001/api/v1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
