--- a/service-b2b-data/pyproject.toml
+++ b/service-b2b-data/pyproject.toml
@@ -9,8 +9,9 @@ python = "^3.11"
 fastapi = "^0.109.0"
 uvicorn = "^0.27.0"
 redis = "^5.0.1"
-pydantic = "^2.6.0"
-requests = "^2.31.0"
+httpx = "^0.26.0"
+fastapi-mail = "^1.4.1"
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
