chore(project): implement Phase 7 quality gates with Playwright and Ruff
- **E2E Testing**: Integrated Playwright in `frontend-landing`, added configuration, and created `core-flow.spec.ts` to verify the critical user journey (Login -> Dashboard -> Transfer).
- **Code Quality**: Configured `ruff` for Python services (line-length 100, strict rules), optimized imports, and fixed formatting issues across `service-b2b-data`, `service-fintech`, and `service-price-monitor`.
- **Documentation**: Updated `HISTORY.md` and `README.md` to reflect Phase 7 progress, adding instructions for running E2E tests and static analysis.

--- a/service-b2b-data/pyproject.toml
+++ b/service-b2b-data/pyproject.toml
@@ -24,9 +24,12 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-line-length = 88
-target-version = "py311"
-select = ["E", "F", "I", "B"] # Podstawowe zasady: błędy, formatowanie, importy
+line-length = 100
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B"]
+ignore = ["B008"]
+
 
 [tool.mypy]
 python_version = "3.11"
