chore(infra): migrate to multi-stage builds and stabilize Nginx gateway
- **Docker Optimization:** Refactored `Dockerfile`s for all services (Frontend, Fintech, B2B, Monitor) to use multi-stage builds, significantly reducing image sizes by separating build dependencies from runtime artifacts.
- **Nginx Stability:** Implemented `nginx_safe.conf` using Docker's embedded DNS resolver (`127.0.0.11`) and variable-based upstream definitions to eliminate startup race conditions/crash loops.
- **Configuration:** Updated `docker-compose.yml` to utilize the new runtime environments (referencing `/opt/venv`), support Vite development targets, and mount the robust Nginx configuration.
- **Frontend:** Added production-ready `nginx.conf` for the SPA and configured Vite proxy settings for seamless local development.
- **Docs:** Updated `README.md` and `HISTORY.md` to reflect Phase 8.3 changes and infrastructure decisions.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,38 +2,45 @@ server {
     listen 80;
     server_name localhost;
 
+    # Resolver Dockera - to JEDYNY sposób na stabilny start Nginxa
+    resolver 127.0.0.11 valid=10s;
+
+    # Definiujemy nazwy hostów jako zmienne -> wymusza to sprawdzenie DNS w momencie żądania
+    set $frontend_host "frontend";
+    set $fintech_host "service-fintech";
+    set $b2b_host "service-b2b";
+
     # --- FRONTEND ---
     location / {
-        proxy_pass http://frontend:5173; 
+        proxy_pass http://$frontend_host:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
     }
 
     # --- API: FINTECH ---
     location /api/fintech/ {
-        # Przekierowujemy /api/fintech/accounts -> /api/accounts
-        proxy_pass http://service-fintech:8002/api/;
+        # Przepisujemy URL: /api/fintech/accounts... -> /api/accounts...
+        rewrite ^/api/fintech/(.*) /api/$1 break;
+        
+        proxy_pass http://$fintech_host:8002;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # --- API: B2B DATA ---
     location /api/b2b/ {
-        # Przekierowujemy /api/b2b/companies -> /api/v1/companies
-        # Przekierowujemy /api/b2b/crypto -> /api/v1/crypto
-        # Przekierowujemy /api/b2b/contact -> /api/v1/contact
-        # Przekierowujemy /api/b2b/system-status -> /api/v1/system-status
-        proxy_pass http://service-b2b:8001/api/v1/;
+        rewrite ^/api/b2b/(.*) /api/v1/$1 break;
+        
+        proxy_pass http://$b2b_host:8001;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # --- API: MONITOR ---
-    location /api/monitor/ {
-        # proxy_pass http://service-monitor:8002/;
-        return 503 "Service Monitor not ready";
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
