--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     container_name: b2b_service
     ports:
       - "8001:8001"
+    command: /opt/venv/bin/python -m uvicorn main:app --host 0.0.0.0 --port 8001
     depends_on:
       - redis
     networks:
@@ -47,7 +48,7 @@ services:
       - "8002:8002"
     volumes:
       - ./service-fintech:/app
-    command: uvicorn core.asgi:application --host 0.0.0.0 --port 8002 --reload
+    command: /opt/venv/bin/python -m uvicorn core.asgi:application --host 0.0.0.0 --port 8002 --reload
     environment:
       - POSTGRES_DB=portfolio_main
       - POSTGRES_USER=user
@@ -66,7 +67,7 @@ services:
     container_name: monitor_service
     volumes:
       - ./service-price-monitor:/app
-    command: celery -A main worker --loglevel=info -B
+    command: /opt/venv/bin/python -m celery -A main worker --loglevel=info -B
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
     depends_on:
@@ -76,26 +77,32 @@ services:
 
   # --- FRONTEND (React + Vite) ---
   frontend:
-    build: ./frontend-landing
+    build: 
+      context: ./frontend-landing
+      target: development
     container_name: portfolio_frontend
     volumes:
       - ./frontend-landing:/app
-      - /app/node_modules # Nie nadpisujemy node_modules z kontenera lokalnymi
+      - /app/node_modules
+    ports:
+      - "5173:5173"
     environment:
-      - VITE_API_URL=/api
+      - VITE_API_URL=http://localhost:80
     networks:
       - portfolio_network
 
   nginx:
     image: nginx:1.25-alpine
     container_name: portfolio_gateway
+    restart: always
     ports:
       - "80:80"  # Mapujemy port 80 Twojego komputera na port 80 kontenera
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro  # Mapujemy nasz plik konfiguracyjny
+      - ./nginx/nginx_safe.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - postgres
       - redis
+      - frontend
     networks:
       - portfolio_network
 
