--- a/service-b2b-data/Dockerfile
+++ b/service-b2b-data/Dockerfile
@@ -1,23 +1,29 @@
-FROM python:3.11-slim
+# --- STAGE 1: Builder ---
+FROM python:3.11-slim AS builder
 
-# Ustawienia środowiska (nie tworzymy plików .pyc, logi lecą prosto do konsoli)
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-# Instalujemy narzędzie do zarządzania zależnościami
+RUN apt-get update && apt-get install -y --no-install-recommends gcc
+
 RUN pip install poetry
-
-# Kopiujemy pliki projektu
 COPY pyproject.toml .
-# Jeśli masz plik poetry.lock, odkomentuj poniższe:
-# COPY poetry.lock .
 
-# Konfigurujemy poetry tak, aby nie tworzyło wirtualnego środowiska (wewnątrz Dockera nie jest potrzebne)
-RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi --no-root
+RUN poetry config virtualenvs.in-project true && \
+    poetry install --no-root --no-interaction --no-ansi
+
+# --- STAGE 2: Runtime (Production) ---
+FROM python:3.11-slim AS production
+
+WORKDIR /app
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+COPY --from=builder /app/.venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
 COPY . .
 
-# Uruchamiamy serwer na porcie 8001
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
