chore(vercel): update crypto cron schedule to daily
Adjusted the `update-crypto` cron job in `vercel.json` to run once a day at midnight (`0 0 * * *`) instead of every minute. This change optimizes resource usage for the crypto price monitoring logic within the B2B service.
```

--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
   "crons": [
     {
       "path": "/api/b2b/cron/update-crypto",
-      "schedule": "* * * * *"
+      "schedule": "0 0 * * *"
     }
   ]
 }
