build(vercel): set python runtime to 3.9 and update b2b dependencies
- Specify python3.9 runtime in vercel.json for service-b2b-data and service-fintech to ensure environment consistency.
- Replace fastapi-mail with email-validator in service-b2b-data/requirements.txt to streamline dependencies.

--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,13 @@
     },
     { 
       "src": "service-b2b-data/main.py", 
-      "use": "@vercel/python" 
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.9" }
     },
     { 
       "src": "service-fintech/core/wsgi.py", 
-      "use": "@vercel/python" 
+      "use": "@vercel/python",
+      "config": { "runtime": "python3.9" }
     }
   ],
   "routes": [
