--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,14 @@
 {
   "version": 2,
-  "builds": [
-    { 
-      "src": "frontend-landing/package.json", 
-      "use": "@vercel/static-build", 
-      "config": { "distDir": "dist" } 
-    },
-    { 
-      "src": "service-b2b-data/main.py", 
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
-    },
-    { 
-      "src": "service-fintech/core/wsgi.py", 
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
-    }
+  "rewrites": [
+    { "source": "/api/b2b/(.*)", "destination": "/service-b2b-data/main.py" },
+    { "source": "/api/fintech/(.*)", "destination": "/service-fintech/core/wsgi.py" },
+    { "source": "/(.*)", "destination": "/frontend-landing/dist/index.html" }
   ],
-  "routes": [
-    { "src": "/api/b2b/(.*)", "dest": "/service-b2b-data/main.py" },
-    { "src": "/api/fintech/(.*)", "dest": "/service-fintech/core/wsgi.py" },
-    { "src": "/(.*)", "dest": "/frontend-landing/$1" }
-  ],
+  "functions": {
+    "service-b2b-data/main.py": { "runtime": "@vercel/python@3.9" },
+    "service-fintech/core/wsgi.py": { "runtime": "@vercel/python@3.9" }
+  },
   "crons": [
     {
       "path": "/api/b2b/cron/update-crypto",
