--- a/service-fintech/pyproject.toml
+++ b/service-fintech/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^2.6.0"
 celery = "^5.3.6"
 redis = "^5.0.1"
 reportlab = "^4.1.0"
+dj-database-url = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
