chore(deps): decentralize python dependencies per service
- Remove root-level `requirements.txt` to enforce service isolation.
- Restore `service-b2b-data/requirements.txt` with necessary packages.
- Restore `service-fintech/requirements.txt` including `dj-database-url` for database configuration.

--- a/service-fintech/requirements.txt
+++ b/service-fintech/requirements.txt
@@ -1,8 +1,8 @@
 django>=5.0
 django-ninja>=1.1
 psycopg2-binary
-uvicorn>=0.27.0
-pydantic>=2.6.0
 celery>=5.3.6
-redis>=5.0.1
 reportlab>=4.1.0
+redis>=5.0.1
+pydantic>=2.6.0
+dj-database-url
