--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,19 @@
 {
   "version": 2,
-  "builds": [
-    { 
-      "src": "frontend-landing/package.json", 
-      "use": "@vercel/static-build", 
-      "config": { "distDir": "dist" } 
+  "rewrites": [
+    { "source": "/api/b2b/(.*)", "destination": "/service-b2b-data/main.py" },
+    { "source": "/api/fintech/(.*)", "destination": "/service-fintech/core/wsgi.py" },
+    { "source": "/assets/(.*)", "destination": "/frontend-landing/assets/$1" },
+    { "source": "/(.*)", "destination": "/frontend-landing/index.html" }
+  ],
+  "functions": {
+    "service-b2b-data/main.py": {
+      "runtime": "python3.9"
     },
-    { 
-      "src": "service-b2b-data/main.py", 
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
-    },
-    { 
-      "src": "service-fintech/core/wsgi.py", 
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
+    "service-fintech/core/wsgi.py": {
+      "runtime": "python3.9"
     }
-  ],
-  "routes": [
-    { "src": "/api/b2b/(.*)", "dest": "/service-b2b-data/main.py" },
-    { "src": "/api/fintech/(.*)", "dest": "/service-fintech/core/wsgi.py" },
-    { "handle": "filesystem" },
-    { "src": "/assets/(.*)", "dest": "/frontend-landing/assets/$1" },
-    { "src": "/(.*)", "dest": "/frontend-landing/index.html" }
-  ],
+  },
   "crons": [
     {
       "path": "/api/b2b/cron/update-crypto",
