build(deployment): unify python dependencies and configure vercel monorepo
- Consolidate dependencies from `service-fintech` and `service-b2b-data` into a single root `Pipfile` to streamline the build process.
- Update `vercel.json` to explicitly define build entry points for the React frontend (`@vercel/static-build`) and Python services (`@vercel/python`).
- Configure routing rules to correctly direct traffic to serverless functions (`/api/b2b`, `/api/fintech`) and handle SPA client-side routing.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,11 @@ reportlab = "*"
 redis = "*"
 pydantic = "*"
 dj-database-url = "*"
+fastapi = "*"
+uvicorn = "*"
+httpx = "*"
+pydantic-settings = "*"
+email-validator = "*"
 
 [requires]
 python_version = "3.9"
