--- a/nginx/nginx_safe.conf
+++ b/nginx/nginx_safe.conf
@@ -32,4 +32,13 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
+
+    # --- WEBSOCKETS (B2B) ---
+    location /ws/ {
+        proxy_pass $b2b_upstream;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
 }
