--- a/service-b2b-data/pyproject.toml
+++ b/service-b2b-data/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.11"
 fastapi = "^0.109.0"
 uvicorn = "^0.27.0"
+websockets = "^12.0"
 redis = "^5.0.1"
 httpx = "^0.26.0"
 fastapi-mail = "^1.4.1"
