--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
 
   # Główna baza danych dla Fintechu i Monitoringu
   postgres:
-    image: postgres:15-alpine  # Alpine = bardzo lekki obraz Linuxa (bezpieczeństwo i szybkość)
+    image: pgvector/pgvector:pg15  # Wersja z obsługą wektorów dla AI/RAG
     container_name: portfolio_db
     environment:
       POSTGRES_USER: user
@@ -36,8 +36,14 @@ services:
     ports:
       - "8001:8001"
     command: /opt/venv/bin/python -m uvicorn main:app --host 0.0.0.0 --port 8001
+    env_file:
+      - .env
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+      - DATABASE_URL=postgresql://user:password@postgres:5432/portfolio_main
     depends_on:
       - redis
+      - postgres
     networks:
       - portfolio_network
 
