--- a/service-b2b-data/pyproject.toml
+++ b/service-b2b-data/pyproject.toml
@@ -13,6 +13,11 @@ redis = "^5.0.1"
 httpx = "^0.26.0"
 fastapi-mail = "^1.4.1"
 pydantic-settings = "^2.1.0"
+langchain = "^0.1.0"
+langchain-google-genai = "^0.0.9"
+pgvector = "^0.2.4"
+psycopg2-binary = "^2.9.9"
+sqlalchemy = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
