feat(payments): implement Stripe integration with Webhooks and UI
Introduces a complete payment flow using Stripe Checkout to allow account top-ups.

- **Backend**: Added `create_stripe_checkout_session` and secure `stripe_webhook` in `service-fintech` to handle atomic balance updates via Stripe events.
- **Frontend**: Integrated `createStripeSession` API and added "Refill Account" button in `AccountList` with loading states.
- **UI/UX**: Refreshed Account Card design with Neon Glass aesthetic, better typography, and responsive layout.
- **Docs**: Added Architecture Decision Record `docs/learning_stripe.md` and updated project status in `README.md`.
- **Config**: Added `stripe` dependency and enabled `.env` file support in `docker-compose.yml` for managing API secrets.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,8 @@ services:
     volumes:
       - ./service-fintech:/app
     command: /opt/venv/bin/python -m uvicorn core.asgi:application --host 0.0.0.0 --port 8002 --reload
+    env_file:
+      - .env
     environment:
       - POSTGRES_DB=portfolio_main
       - POSTGRES_USER=user
