feat(fintech): complete stripe integration with dynamic amounts and webhook listener
- **Infrastructure**: Add `stripe-listener` service to `docker-compose` for automated local webhook forwarding to Nginx.
- **Backend**: Support dynamic top-up amounts (20-500 PLN) and fix critical precision bug by enforcing `Decimal` type in webhook processing.
- **Frontend**: Redesign `AccountList` to a horizontal layout with amount selection; enhance `XRayWrapper` with technology-specific color coding (e.g., Postgres Blue, Django Emerald).
- **Docs**: Update Project History and Stripe ADR with implementation details and status.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,20 @@ services:
     networks:
       - portfolio_network
 
+  # --- UTILITIES ---
+  stripe-listener:
+    image: stripe/stripe-cli:latest
+    container_name: stripe_listener
+    # Przekierowujemy webhooki do Nginx (gateway), który skieruje je do Django.
+    # Używamy klucza API z pliku .env do autoryzacji CLI.
+    command: listen --forward-to http://nginx:80/api/fintech/accounts/webhooks/stripe --api-key ${STRIPE_SECRET_KEY} --log-level debug
+    env_file:
+      - .env
+    depends_on:
+      - nginx
+    networks:
+      - portfolio_network
+
 # Definicja sieci - wszystkie kontenery w tej sieci widzą się po nazwach (np. "postgres")
 networks:
   portfolio_network:
